--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ccnubox-rax-calendar",
   "author": "rax",
-  "version": "2.0.0-beta1",
+  "version": "2.0.1",
   "scripts": {
     "start": "rax-scripts start",
     "build": "rax-scripts build",
